--- a/2nd_semester/technologies_diadiktyou/mathima3/exercise2/exercise2/index.html
+++ b/2nd_semester/technologies_diadiktyou/mathima3/exercise2/exercise2/index.html
@@ -173,7 +173,7 @@
         
     </div>
     <div class="footer">
-        <p>Development in HTML5 & CSS3 by <a href="https://www.linkedin.com/in/fotis-tsioumas/" target="_blank">Fotis Tsioumas</a></p>
+        <p>Development in HTML5 & CSS3 by <a href="https://www.linkedin.com/in/fotis-tsioumas/" target="_blank">Fotis Tsioumas (<a href="mailto:fotis.tsioumas@outlook.com">fotis.tsioumas@outlook.com</a>)</a></p>
     </div>
 </body>
 </html>
