--- a/2nd_semester/technologies_diadiktyou/exercise3/exercise3/index.html
+++ b/2nd_semester/technologies_diadiktyou/exercise3/exercise3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="images/gear.jpg" type="image/jpg" sizes="10x10">
     <title>Fotis Airlines</title>
 </head>
@@ -16,7 +16,7 @@
             <li><a href="#flights">Flights</a></li>
             <li><a href="#air-info">Air Info</a></li>
             <li><a href="#travel-guides">Travel Guides</a></li>
-            <li><a href="register-form.html">Register</a></li>
+            <li><a href="register-form.html" class="register">Register</a></li>
         </ul>
         <div class="scrollbar-info">
             <textarea rows="1" cols="450" readonly>Last Flights: Athens-Thessaloniki -> 12:00-14:00, Athens-Rethymno -> 12:00-14:00, Thessaloniki-Athens -> 12:00-14:00, Rethymno-Athens -> 12:00-14:00 | Last Flights: Athens-Thessaloniki -> 12:00-14:00, Athens-Rethymno -> 12:00-14:00, Thessaloniki-Athens -> 12:00-14:00, Rethymno-Athens -> 12:00-14:00 | Last Flights: Athens-Thessaloniki -> 12:00-14:00, Athens-Rethymno -> 12:00-14:00, Thessaloniki-Athens -> 12:00-14:00, Rethymno-Athens -> 12:00-14:00.</textarea>
