--- a/2nd_semester/technologies_diadiktyou/exercise3/exercise3/register-form.html
+++ b/2nd_semester/technologies_diadiktyou/exercise3/exercise3/register-form.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/register-form.css">
     <link rel="icon" href="images/gear.jpg" type="image/jpg" sizes="10x10">
-    <script src="js/main.js"></script>
+    <script src="js/register-form.js"></script>
     <title>Fotis Airlines</title>
 </head>
 <body>
     <h1>Register Form</h1>
     <h2>Please fill the following form.</h2>
+    <h3>To be redirected to the home page fill in all the fields correctly.</h3>
     <form>
         <fieldset><legend>Personal Information</legend>
             <p>
                 <label for="name_customer">Name:</label> 
                 <input type="text" id="name_customer" name="name_customer"></br>
+                <span id="errors_name"></span>
             </p>
             <p>
                 <label for="address">Address:</label> 
                 <input type="text" id="address" name="address"></br>
+                <span id="errors_address"></span>
             </p>
             <p>
                 <label for="country">Country:</label> 
@@ -276,31 +279,37 @@
             <p>
                 <label for="zip_code">ZIP Code:</label> 
                 <input type="text" id="zip_code" name="zip_code" maxlength="5"></br>
+                <span id="errors_zip"></span>
             </p>
             <p>
                 <label for="email_customer">Email:</label> 
-                <input type="email" id="email_customer" name="email_customer"></br>
+                <input type="text" id="email_customer" name="email_customer"></br>
+                <span id="errors_email"></span>
             </p>
             <p>
                 <label for="tel_customer">Telephone:</label> 
-                <input type="text" id="tel_customer" name="tel_customer"></br>
+                <input type="text" id="tel_customer" name="tel_customer" maxlength="14"></br>
+                <span id="errors_tel"></span>
             </p>
             <p>
                 <label for="card_number">Credit Card Number:</label> 
                 <input type="text" id="card_number" name="card_number" maxlength="16"></br>
+                <span id="errors_card"></span>
             </p>
             <p>
-                <label for="card_type">Credit Card Type:</label> 
-                <select id="card_type" name="card_type">
-                    <option value="Visa">Visa</option>
-                    <option value="Mastercard">Mastercard</option>
-                    <option value="Other">Other</option>
+                <label>Credit Card Type:</label>
+                VISA 
+                <input type="radio" id="visa" name="card_type" value="visa" checked>
+                | MASTERCARD
+                <input type="radio" id="mastercard" name="card_type" value="mastercard">
+                | OTHER
+                <input type="radio" id="other" name="card_type" value="other">
                 </select></br>
             </p>
             <div class="buttons">
                 <input type="button" value="Submit" id="submit" name="submit">
                 <input type="reset" value="Clear" id="reset" name="reset">
-                <input type="button" value="Print" id="print" name="print">
+                <input type="button" value="Print" id="print" name="print" onClick="window.print()">
             </div>
         </fieldset>
     </form>
