--- a/2nd_semester/technologies_diadiktyou/exercise4/exercise4/index.html
+++ b/2nd_semester/technologies_diadiktyou/exercise4/exercise4/index.html
@@ -320,7 +320,7 @@
     <div class="search_section">
         <h2>You can view your personal information by entering your email</h2>
         <form class="search_form" action="connect.php" method="GET">
-            <label for="email_user">Search by username: </label>
+            <label for="email_user">Search by email: </label>
             <input type="text" id="email_user" name="email_user">
             <input type="button" name="search_btn" id="search_btn" value="Search">
             <input type="reset" name="clear_search" id="clear_search" value="Clear">
